# web-scrapping

./: .gitignore  DataAnalysis.ipynb  README.md  config.py  download_links.py  jobs.json  parse_html.py  pyproject.toml  save_html_pages.py
data/: link_list.txt
linkedin-scrapper/: linkedin_scrapper.py
